api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service-nodeport
spec:
  type: NodePort
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
