api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-depl
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: abbaslamouri/lightmylamp-api
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: backend
spec:
  selector:
    app: api
  ports:
    - name: api
      protocol: TCP
      port: 5000
      targetPort: 5000
