db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-depl
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mongo
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: backend
spec:
  selector:
    app: db
  ports:
    - name: db
      protocol: TCP
      port: 27017
      targetPort: 27017
